# pyrdragdisk

./: .gitignore  README.md  pyproject.toml
examples/Fomalhaut/: fomalhaut_demo.py
src/pyrdragdisk/: __init__.py  belt.py  config.py  disk.py  image.py  particles.py  radialbins.py  star.py  utils.py  warnings.py
tests/: test_pyrdragdisk_smoke.py
